--- a/page7.html
+++ b/page7.html
@@ -3,116 +3,113 @@
 <head>
 <meta charset="UTF-8">
 <title>First Video Call 📱</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Dancing+Script:wght@600&display=swap');
-
-body{
-  margin:0;
-  height:100vh;
-  background:radial-gradient(circle at top,#0c0f2d,#000);
-  font-family:Poppins,sans-serif;
-  color:#fff;
-  overflow:hidden;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+body {
+  margin: 0;
+  height: 100vh;
+  background: radial-gradient(circle at top, #0c0f2d, #000);
+  font-family: Poppins, sans-serif;
+  color: #fff;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.8s;
 }
 
-/* fade */
-.fade{animation:fadeIn 1.8s ease}
-@keyframes fadeIn{from{opacity:0}to{opacity:1}}
+/* fade in */
+.fade { animation: fadeIn 1.8s ease forwards; }
+@keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
 /* stars */
-.star{
-  position:absolute;
-  width:2px;height:2px;
-  background:white;
-  border-radius:50%;
-  opacity:.45;
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: white;
+  border-radius: 50%;
+  opacity: 0.45;
 }
 
-/* floating glow */
-.glow{
-  position:absolute;
-  inset:0;
-  background:radial-gradient(circle at center,rgba(255,80,150,.08),transparent 70%);
+/* glow background */
+.glow {
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle at center, rgba(255, 80, 150, 0.08), transparent 70%);
 }
 
 /* phone frame */
-.phone{
-  width:320px;
-  background:#000;
-  border-radius:30px;
-  padding:18px;
-  box-shadow:0 0 40px rgba(255,80,150,.5);
+.phone {
+  width: 320px;
+  background: #000;
+  border-radius: 30px;
+  padding: 18px;
+  box-shadow: 0 0 40px rgba(255, 80, 150, 0.5);
+  z-index: 1;
 }
 
 /* screen */
-.screen{
-  background:linear-gradient(135deg,#1a1f4d,#0c1025);
-  border-radius:22px;
-  padding:25px 20px;
-  text-align:center;
+.screen {
+  background: linear-gradient(135deg, #1a1f4d, #0c1025);
+  border-radius: 22px;
+  padding: 25px 20px;
+  text-align: center;
 }
 
 /* call time */
-.time{
-  font-size:13px;
-  opacity:.7;
-  margin-bottom:10px;
+.time {
+  font-size: 13px;
+  opacity: 0.7;
+  margin-bottom: 10px;
 }
 
 /* heart pulse */
-.heart{
-  font-size:38px;
-  animation:beat 2s infinite;
+.heart {
+  font-size: 38px;
+  animation: beat 2s infinite;
 }
-@keyframes beat{
-  0%{transform:scale(1)}
-  50%{transform:scale(1.2)}
-  100%{transform:scale(1)}
-}
-
-h1{
-  font-family:'Dancing Script',cursive;
-  font-size:32px;
-  margin:10px 0;
+@keyframes beat {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.2); }
 }
 
-p{
-  font-size:14px;
-  line-height:1.6;
-  opacity:.9;
+h1 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 32px;
+  margin: 10px 0;
 }
 
-/* next button */
-button{
-  margin-top:20px;
-  padding:12px 30px;
-  border:none;
-  border-radius:25px;
-  background:linear-gradient(135deg,#ff5fa2,#ff2f6d);
-  color:#fff;
-  font-size:14px;
-  cursor:pointer;
-  box-shadow:0 0 20px rgba(255,120,200,.6);
+p {
+  font-size: 14px;
+  line-height: 1.6;
+  opacity: 0.9;
 }
 
-button:hover{transform:scale(1.05)}
+/* button */
+button {
+  margin-top: 20px;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 25px;
+  background: linear-gradient(135deg, #ff5fa2, #ff2f6d);
+  color: #fff;
+  font-size: 14px;
+  cursor: pointer;
+  box-shadow: 0 0 20px rgba(255, 120, 200, 0.6);
+  transition: transform 0.2s;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
 </style>
 </head>
 
 <body class="fade">
 
 <div class="glow"></div>
-
-<!-- stars -->
-<script>
-for(let i=0;i<60;i++){
-  document.write(`<div class="star" style="top:${Math.random()*100}%;left:${Math.random()*100}%"></div>`);
-}
-</script>
 
 <div class="phone">
   <div class="screen">
@@ -126,16 +123,26 @@ for(let i=0;i<60;i++){
       I felt hope.<br>
       Quiet, warm, and real.
     </p>
-
-    <button onclick="next()">Next ✨</button>
+    <button id="nextBtn">Next ✨</button>
   </div>
 </div>
 
 <script>
-function next(){
-  document.body.style.opacity=0;
-  setTimeout(()=>{window.location='page8.html'},800);
+// Create stars dynamically
+const starCount = 60;
+for(let i = 0; i < starCount; i++) {
+  const star = document.createElement('div');
+  star.className = 'star';
+  star.style.top = Math.random() * 100 + '%';
+  star.style.left = Math.random() * 100 + '%';
+  document.body.appendChild(star);
 }
+
+// Next button click
+document.getElementById('nextBtn').addEventListener('click', () => {
+  document.body.style.opacity = 0;
+  setTimeout(() => { window.location.href = 'page8.html'; }, 800);
+});
 </script>
 
 </body>
